# osi-grpc-packaging

./: .clang-format  .clang-tidy  .cmake-format  .gitmodules  .protolint.yml  CMakeLists.txt  README.md  osi_application_control.proto  osi_grpc_application_control.proto  osi_grpc_symmetric_delta.proto
.devcontainer/: Dockerfile  devcontainer.json  install-protolint.sh  reinstall-cmake.sh
.github/workflows/: ci.yml  test-report.yml
cmake/: OsiGrpcPackagingConfig.cmake.in
test/: .clang-tidy  CMakeLists.txt  osi_grpc_application_control_mock.h  osi_grpc_application_control_test.cc  osi_grpc_symmetric_delta_mock.h  osi_grpc_symmetric_delta_test.cc
